# advent-of-code-2022

./: .gitpod.Dockerfile  .gitpod.yml  README.md  day_1.py  main.py  new_solution.sh  pyproject.toml
days/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_25.py  template_day.txt
reflections/: day_01.md  day_02.md  day_03.md  day_04.md  day_05.md  day_06.md  day_07.md  day_08.md  day_09.md  day_10.md  day_11.md  day_12.md  day_13.md  day_14.md  day_15.md  day_16.md  day_17.md  day_18.md  day_19.md  day_20.md  day_21.md  day_22.md  day_25.md
requirements/: dev.txt
tests/: template_test.txt  test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_1.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_14.py  test_day_15.py  test_day_16.py  test_day_17.py  test_day_18.py  test_day_19.py  test_day_20.py  test_day_21.py  test_day_22.py  test_day_25.py
